--- a/src/components/Nav/Nav.module.css
+++ b/src/components/Nav/Nav.module.css
@@ -36,3 +36,39 @@
   border-radius: 10px;
   cursor: pointer;
 }
+
+@media screen and (max-width: 768px) {
+  .Nav_right {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 999;
+  width: 100%;
+  height: 100vh;
+  background-color: #fff;
+  opacity: 0;
+  visibility: hidden;
+  transform: translateX(-100%);
+  transition: opacity 0.3s, visibility 0s 0.3s, transform 0.3s;
+  }
+  .Nav_toggle:checked + .Nav_button + .Nav_list {
+  opacity: 1;
+  visibility: visible;
+  transform: translateX(0);
+  transition: opacity 0.3s, visibility 0s 0s, transform 0.3s;
+  }
+  .Nav_list {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  }
+  .Nav_item {
+  margin-bottom: 2rem;
+  }
+  .Nav_link {
+  font-size: 2rem;
+  }
+  }
