--- a/src/components/Main/Main.module.css
+++ b/src/components/Main/Main.module.css
@@ -25,21 +25,26 @@
 
 .Main-Buttons button {
   justify-content: center;
-  margin: 40px 10px;
+  margin: 30px 15px;
   padding: 10px;
   border: 1px solid transparent;
   border-radius: 10px;
-  background-color: #011526;
-  color: #035AA6;
-  font-size: 14px;
+  background-color: #1c415c;
+  color: white;
+  font-size: 16px;
 }
 
 .Main-Buttons button:hover {
   background-color: #163154;
   color: white;
   border-radius: 10px;
-  font-size: 16px;
+  font-size: 20px;
   cursor: pointer;
+}
+
+.Main-Icons {
+  padding: 20px;
+  justify-content: center;
 }
 
 .Main-Icons img{
