--- a/src/components/Main/Main.module.css
+++ b/src/components/Main/Main.module.css
@@ -59,9 +59,8 @@
   height: 70px;
   width: 70px;
   margin: 10px;
-  filter: grayscale(100%);
 }
 
 .Main-Icons img:hover {
-  filter: grayscale(0%);
+  transform: scale(1.3);
 }
