--- a/src/components/Nav/Nav.module.css
+++ b/src/components/Nav/Nav.module.css
@@ -1,74 +1,35 @@
 .Nav {
-  height: 100px;
-  width: 100%;
   background-color: #011526;
   display: flex;
   flex-direction: row;
-  align-items: flex-start;
-  justify-content: space-between;
-  z-index: 1;
+  justify-content: center;
+  align-items: center;
   font-family: 'Source Serif Pro', serif;
-  opacity: .8;
+  gap: 15px;
 }
 
-.Nav_left img {
+.Nav img {
   height: 100px;
   width: 100px;
 }
 
-.Nav_right {
-  margin-top: 30px;
-  margin-right: 50px;
-}
-
-.Nav_right button {
+.Nav button {
   padding: 15px;
-  margin-right: 20px;
+  width: 120px;
   background-color: #011526;
   color: #035AA6;
   border: none;
   font-size: 18px;
 }
 
-.Nav_right button:hover {
+.Nav button:hover {
   background-color: #163154;
   color: white;
   border-radius: 10px;
   cursor: pointer;
 }
 
-@media screen and (max-width: 768px) {
-  .Nav_right {
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: 999;
-  width: 100%;
-  height: 100vh;
-  background-color: #fff;
-  opacity: 0;
-  visibility: hidden;
-  transform: translateX(-100%);
-  transition: opacity 0.3s, visibility 0s 0.3s, transform 0.3s;
-  }
-  .Nav_toggle:checked + .Nav_button + .Nav_list {
-  opacity: 1;
-  visibility: visible;
-  transform: translateX(0);
-  transition: opacity 0.3s, visibility 0s 0s, transform 0.3s;
-  }
-  .Nav_list {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 100%;
-  }
-  .Nav_item {
-  margin-bottom: 2rem;
-  }
-  .Nav_link {
-  font-size: 2rem;
-  }
-  }
+.Nav img:hover {
+  transform: scale(1.1);
+}
+
