--- a/src/components/Main/Main.module.css
+++ b/src/components/Main/Main.module.css
@@ -1,24 +1,24 @@
 .Main-Container {
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
 }
 
 .Main-Img {
-  margin: 25px auto;
+  margin: 50px auto;
 }
 
 .Main-Img img {
   border: 1px solid transparent;
   border-radius: 40px;
   width: 400px;
-  height: 90%;
+  height: 400px;
 }
 
 .Main-Description {
   justify-content: center;
   width: 40%;
   padding: 5px;
-  margin: 20px auto;
+  margin: 0 auto;
   text-align: center;
 }
 
