--- a/src/components/Main/Main.module.css
+++ b/src/components/Main/Main.module.css
@@ -43,6 +43,51 @@
   font-size: 18px;
 }
 
+.Main-Icons {
+  padding: 20px;
+  justify-content: center;
+}
+
+.Main-Icons img {
+  height: 70px;
+  width: 70px;
+  margin: 10px;
+}
+
+.projects-container>h3 {
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  font-size: 28px;
+  font-weight: 700;
+}
+
+.projects-container--carousel {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  padding: 40px;
+  gap: 15px;
+}
+
+.contact-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.contact-button {
+  font-size: 20px;
+  height: 80px;
+  width: 150px;
+  background-color: #1c415c;
+  border: none;
+  border-radius: 30px;
+}
+
 .Main-Buttons button:hover {
   background-color: #163154;
   color: white;
@@ -50,17 +95,13 @@
   cursor: pointer;
 }
 
-.Main-Icons {
-  padding: 20px;
-  justify-content: center;
-}
-
-.Main-Icons img{
-  height: 70px;
-  width: 70px;
-  margin: 10px;
-}
-
 .Main-Icons img:hover {
   transform: scale(1.2);
+}
+
+.contact-button:hover {
+  transform: scale(1.05);
+  background-color: #163154;
+  color: white;
+  cursor: pointer;
 }
