--- a/src/components/projects/Projects.module.css
+++ b/src/components/projects/Projects.module.css
@@ -7,6 +7,9 @@
 }
 
 .projects-item {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   background-color: #1c415c;
   border-radius: 4px;
   box-shadow: 0 0 4px rgba(0, 0, 0, 0.5);
